Yeah so far, its been okay

--- a/frontEnd/pages/dashboard/dashboard.html
+++ b/frontEnd/pages/dashboard/dashboard.html
@@ -83,6 +83,14 @@
                             <span class="menu-text">LOG OUT</span>
                         </a>
                     </div>
+                    <!-- Last Sync Status -->
+                    <div class="nav-sync-status" id="navSyncStatus">
+                        <div class="nav-sync-icon">🔄</div>
+                        <div class="nav-sync-text">
+                            <div class="nav-sync-label">SYNC</div>
+                            <div class="nav-sync-time" id="navLastSyncTime">NEVER</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
