ok good for now

--- a/frontEnd/pages/dashboard/dashboard.html
+++ b/frontEnd/pages/dashboard/dashboard.html
@@ -146,7 +146,7 @@
                 <div class="widget-header">
                     <div class="widget-icon goals-icon">
                        <div class="pixel-logo">
-                            <img src="../../assets/dashboard/user.gif" alt="Steps Data" />
+                            <img src="../../assets/dashboard/user.avif" alt="Steps Data" />
                         </div>  
                     </div>
                     <h3 class="widget-title">USER DATA</h3>
