--- a/frontEnd/pages/auth/auth.html
+++ b/frontEnd/pages/auth/auth.html
@@ -21,9 +21,7 @@
     <div class="auth-container">
         <!-- Logo Circle -->
         <div class="logo-circle">
-            <div class="logo-placeholder">
-                <span class="logo-text">H+</span>
-            </div>
+                <img class="pixel-logo" src="../../assets/auth/user.gif"/>
         </div>
         
         <!-- Auth Form -->
